Bug 288755 - Message reply includes attachments
Summary: Message reply includes attachments
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.8
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-11 19:13 UTC by Antonio Rojas
Modified: 2011-12-12 18:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2011-12-11 19:13:42 UTC
Version:           4.8 (using Devel) 
OS:                Linux

I'm not sure if this is a "bug" or a "feature", but it is certainly unexpected: replying to a message includes all attached files from the original message in the reply

Reproducible: Always

Steps to Reproduce:
Reply to a message with attachments

Actual Results:  
The attachments are included in the reply

Expected Results:  
The attachments are not included in the reply
Comment 1 Colin J Thomson 2011-12-11 20:48:20 UTC
I am also seeing this with 4.7.90/F16. I have not found a way to toggle this option on/off.
Comment 2 Laurent Montel 2011-12-12 09:54:46 UTC
I confirm it.
Don't know why for the moment
Comment 3 Torgny Nyblom 2011-12-12 15:11:12 UTC
Most likely related to my fix for inline images in html replies
Comment 4 Torgny Nyblom 2011-12-12 18:55:39 UTC
Git commit c9fc92caf407688413284db4eed2cfb3b4a2c610 by Torgny Nyblom.
Committed on 12/12/2011 at 19:55.
Pushed by tnyblom into branch 'master'.

Don't add attchments when not forwarding

BUG: 288755

M  +1    -1    templateparser/templateparser.cpp

http://commits.kde.org/kdepim/c9fc92caf407688413284db4eed2cfb3b4a2c610