Don't add attchments when not forwarding

BUG: 288755